- Tests fix (added Observer instance everywhere); - Successfully implemented Observer-Observable paradigm;